overflow fix;

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ header {
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  position: relative;
 }
 .particle {
   position: absolute;
@@ -78,5 +79,17 @@ header {
 @media screen and (max-width: 480px) {
   .text-holder h1 {
     font-size: 20px;
+  }
+  .text-holder h2 {
+    font-size: 15px;
+  }
+  .button {
+    width: 160px;
+    height: 36px;
+    font-size: 13px;
+  }
+  .button img {
+    width: 10px;
+    transform: translate(-90%, -50%);
   }
 }
